Handle resizing, added footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 	<div id="two-output"></div>
+	<div id="info">
+		<p>Made by <a href="http://github.com/mjkaufer">@mjkaufer</a></p>
+		<p><a href="http://github.com/mjkaufer/Hex">Source</a></p>
+	</div>
 	<script src="js/main.js"></script>
 </body>
 </html>
