--- a/index.html
+++ b/index.html
@@ -3,24 +3,13 @@
 <head>
 	<script src="js/tinycolor.js"></script>
 	<script src="js/randomColor.js"></script>
-	<script src="js/two.min.js"></script>
+	<script src="js/snap.svg-min.js"></script>
 	<link rel="stylesheet" href="css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
 	<div id="svg">
-		<div id="two-output">
-
-		</div>
-		<svg version="1.1" height="0" width="0">
-			<defs>
-		        <clipPath id="name">
-		            <text id="clipText" x="0" y="0" font-family="Leckerli One" font-size="230px" font-weight="400" font-style="italic">Matt</text>
-		        </clipPath>
-	        </defs>
-		</svg>
-
 	</div>
 	<div id="info">
 		<p>Made by <a href="http://github.com/mjkaufer">@mjkaufer</a></p>
