Text mask works

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<script src="js/randomColor.js"></script>
 	<script src="js/snap.svg-min.js"></script>
 	<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 	<div id="info">
