Random toggle initially, changed source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="info">
 		<p>Made by <a href="http://github.com/mjkaufer">@mjkaufer</a></p>
-		<p><a href="http://github.com/mjkaufer/Hex">Source</a></p>
+		<p><a href="http://github.com/mjkaufer/HexText">Source</a></p>
 	</div>
 	<script src="js/main.js"></script>
 </body>
